fix wrap in generated text box

--- a/src/App.css
+++ b/src/App.css
@@ -68,8 +68,3 @@
   border-radius: 10px;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
-.centerCustom {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
